--- a/estilos.css
+++ b/estilos.css
@@ -99,6 +99,9 @@ nav ul
 {
 	background:white;
 	border-bottom:3px solid #22BCE0;
+	margin-bottom: 3em;
+	min-height: 128px;
+	position: relative;
 }
 #contenido .item p
 {
@@ -132,4 +135,15 @@ nav ul
 {
 	color:#444;
 	text-decoration:none;
+}
+#contenido .item .votacion
+{
+	background: white;
+	border-radius: 0 0 0.5em 0.5em;
+	margin: 3px 0 0 0;
+	padding: 0.5em 0;
+	position: absolute;
+	text-align: center;
+	top: 100%;
+	width:96px;
 }
