--- a/estilos.css
+++ b/estilos.css
@@ -144,8 +144,31 @@ nav ul
 	color:#7A7A7A;
 	font-size:0.9em;
 }
+#contenido .item .datos_item
+{
+	text-align: right;
+}
+#contenido .item .datos_item .comentarios_item
+{
+	background: #878787;
+	border-radius: 4px;
+	color: white;
+	padding:4px;
+	position: relative;
+	text-decoration: none;
+}
+#contenido .item .datos_item .comentarios_item:after
+{
+	color: #878787;
+	content: "\e601";
+	font-family: "icomoon";
+	position: absolute;
+	right: 0;
+	bottom: -0.7em;
+}
 #contenido .item .datos_item .guardar_item
 {
+	margin: 0 1em;
 	text-decoration: none;
 }
 #contenido .item .datos_item .guardar_item:after
@@ -159,6 +182,7 @@ nav ul
 	background:#22BCE0;
 	border-radius:0.5em;
 	color:white;
+	float: left;
 	padding:0.2em 0.5em;
 	text-decoration:none;
 }
