--- a/estilos.css
+++ b/estilos.css
@@ -21,6 +21,10 @@ body
 	font-size: 16px;
 	margin: 0;
 }
+footer
+{
+	
+}
 header
 {
 	background: #434343;
@@ -126,6 +130,10 @@ nav ul
 	list-style: none;
 	margin: 0;
 	padding: 0;
+}
+#bienvenida
+{
+	display: none;
 }
 #contenido
 {
