--- a/estilos.css
+++ b/estilos.css
@@ -23,7 +23,15 @@ body
 }
 footer
 {
-	
+	background: #434343;
+	color: #A7A7A7;
+	padding: 1em 0;
+	text-align: center;
+	width: 100%;
+}
+footer p
+{
+	margin: 0;
 }
 header
 {
@@ -161,18 +169,21 @@ nav ul
 	background: #878787;
 	border-radius: 4px;
 	color: white;
+	margin: 0 0 0 2em;
 	padding:4px;
 	position: relative;
 	text-decoration: none;
 }
 #contenido .item .datos_item .comentarios_item:after
 {
-	color: #878787;
-	content: "\e601";
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 5px solid #878787;
+	content: "";
 	font-family: "icomoon";
+	left: 10px;
 	position: absolute;
-	right: 0;
-	bottom: -0.7em;
+	top:100%;
 }
 #contenido .item .datos_item .guardar_item
 {
@@ -245,4 +256,7 @@ nav ul
 {
 	color:green;
 	content: "\e602";
+}
+strong{
+	font-weight: bold;
 }
